.local-dev/manifest/argo-workflow/argo-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argo-server
  namespace: argo

spec:
  template:
    spec:
      containers:
        - name: argo-server
          args:
            - server
            - --auth-mode=server
            - --secure=false
          readinessProbe:
            httpGet:
              scheme: HTTP
